app settings and staticwebapp config

--- a/MyDrinkingBuddy.Api/appsettings.json
+++ b/MyDrinkingBuddy.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Cors": {
-    "Origins": [ "http://localhost:5173" ]
+    "Origins": [ "http://localhost:5173", "https://polite-sand-0abaf6903.2.azurestaticapps.net" ]
   },
   "AllowedHosts": "*"
 }
