Client Authentication msal

--- a/MyDrinkingBuddy.ClientVue/.env
+++ b/MyDrinkingBuddy.ClientVue/.env
@@ -1,1 +1,5 @@
 VITE_API_URL=https://localhost:7089
+VITE_AZURE_AD_CLIENTID=26ea82e6-ebd1-4e3a-814a-399abdc80349
+VITE_AZURE_AD_AUTHORITY=https://mdbprod.b2clogin.com/mdbprod.onmicrosoft.com/B2C_1_my-drinking-buddy-test
+VITE_AZURE_AD_REDIRECT_URI=http://localhost:5173
+VITE_AZURE_AD_POST_LOGOUT_REDIRECT_URI=http://localhost:5173
