--- a/MyDrinkingBuddy.ClientVue/.env.production
+++ b/MyDrinkingBuddy.ClientVue/.env.production
@@ -1,1 +1,2 @@
 VITE_API_URL=https://mydrinkingbuddy.azurewebsites.net
+VITE_AZURE_AD_AUTHORITY=https://mdbprod.b2clogin.com/mdbprod.onmicrosoft.com/B2C_1_my-drinking-buddy
