--- a/MyDrinkingBuddy.ClientVue/package.json
+++ b/MyDrinkingBuddy.ClientVue/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.32.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bottom-navigation-vue": "^3.3.1",
@@ -30,6 +31,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sass": "^1.57.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.12"
