--- a/MyDrinkingBuddy.Api/MyDrinkingBuddy.Api.csproj
+++ b/MyDrinkingBuddy.Api/MyDrinkingBuddy.Api.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.12" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.12" />
+	<PackageReference Include="Microsoft.Identity.Web" Version="1.25.10" />
 	<PackageReference Include="NSwag.Commands" Version="13.16.1" />
 	<PackageReference Include="NSwag.MSBuild" Version="13.16.1">
 		<PrivateAssets>all</PrivateAssets>
