--- a/MyDrinkingBuddy.ClientVue/package.json
+++ b/MyDrinkingBuddy.ClientVue/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/msal-browser": "^2.32.1",
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bottom-navigation-vue": "^3.3.1",
     "dayjs": "^1.11.7",
