--- a/MyDrinkingBuddy.ClientVue/.env.production
+++ b/MyDrinkingBuddy.ClientVue/.env.production
@@ -1,2 +1,6 @@
 VITE_API_URL=https://mydrinkingbuddy.azurewebsites.net
-VITE_AZURE_AD_AUTHORITY=https://mdbprod.b2clogin.com/mdbprod.onmicrosoft.com/B2C_1_my-drinking-buddy
+VITE_AZURE_AD_CLIENTID=26ea82e6-ebd1-4e3a-814a-399abdc80349
+VITE_AZURE_AD_AUTHORITY=https://mdbprod.b2clogin.com/mdbprod.onmicrosoft.com/B2C_1_my-drinking-buddy-test
+VITE_AZURE_AD_REDIRECT_URI=https://polite-sand-0abaf6903.2.azurestaticapps.net/
+VITE_AZURE_AD_POST_LOGOUT_REDIRECT_URI=https://polite-sand-0abaf6903.2.azurestaticapps.net/
+VITE_AZURE_AD_SCOPE=https://mdbprod.onmicrosoft.com/fd0c153b-428a-4f87-a702-ed8ec8ea4b4b/mdb_api
