--- a/MyDrinkingBuddy.Api/appsettings.json
+++ b/MyDrinkingBuddy.Api/appsettings.json
@@ -8,5 +8,12 @@
   "Cors": {
     "Origins": [ "http://localhost:5173", "https://polite-sand-0abaf6903.2.azurestaticapps.net" ]
   },
+  "AzureAdB2C": {
+    "Instance": "https://mdbprod.b2clogin.com",
+    "Domain": "mdbprod.onmicrosoft.com",
+    "ClientId": "fd0c153b-428a-4f87-a702-ed8ec8ea4b4b",
+    "TenantId": "eb641dbb-45b1-4be3-96c4-a1c487396f44",
+    "SignUpSignInPolicyId": "B2C_1_my-drinking-buddy-test"
+  },
   "AllowedHosts": "*"
 }
